style/style.css
@font-face {
    font-family: name;
    src: url("../fonts/calling.otf");
}
body{
    font-family: name;
    background-image: url(../images/kitykatimg.png);
    overflow-x: hidden;
}
.options {
    position: fixed;
    margin-top: 8%;
    margin-left: 5%;
    background-color: brown;
    /* opacity: 0.01; */
}
.links {
    background-color: rgb(255, 161, 161);
}
a, .projectText {
    color: brown;
}
.projectLink {
    color: rgb(255, 161, 161);
}
a:hover {
    color: beige;
}
.mainLink {
    font-size: 25px;
}
#nameAnimation {
    /* display: none; */
    margin-top: 50%;
    color:  rgb(255, 161, 161);
    opacity: 0.01;
}
#indexOptions {
    opacity: 0.01;
    color:  rgb(255, 161, 161);
}
.row2 {
    margin-top: 5%;
    display: block;
}
/* .row {
    margin-top: 5%;
} */
.last {
    margin-bottom: 15%;
}
.spacer {
    margin-bottom: 8%;
}
.spacer2 {
    margin-top: 10%;
}
/* .nameOfCard {
    background-color: brown;
} */
.cardInfo {
    background-color:  rgb(255, 161, 161);
}
.card {
    background-color: brown;
}

.show {
    z-index: 1;
}
.hide {
    z-index: 0;
}
.smallScreenHeader {
    display: none;
    background-color: brown;
    padding: 15px;
}
@media only screen and (max-width: 768px) {
    .options {
        display: none;
    }
    .card {
        margin: 5%;
    }
    .container-fluid {
        padding: 0;
    }
    .smallScreenHeader {
        display: block;
    }
}

